--- a/Projects/project4.qmd
+++ b/Projects/project4.qmd
@@ -1,7 +1,7 @@
 ---
-title: "Client Report - [Insert Project Title]"
+title: "Client Report - Can you predict that?"
 subtitle: "Course DS 250"
-author: "[STUDENT NAME]"
+author: "Sebastian Berber"
 format:
   html:
     self-contained: true
